# students_generator

./: .env.develop  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  checks.yml  coverage.yml  deploy.yml  linters.yml
app/: Dockerfile  __main__.py  alembic.ini  config.py  create_group_student.py  entities.py  get_report.py  group_builder.py  main.py  pyproject.toml  report_creator.py
app/api/: main.py
app/data/migrations/: env.py
app/data/migrations/versions/: 001_initial_migration.py  002_add_email_for_student.py  004_add_password_for_student.py  321660feb675_add_admin.py
app/data/models/: __init__.py  admins.py  groups.py  students.py  subjects.py  timetables.py
app/domain/: create_group_student.py  create_subject_time_table.py  entities.py  group_builder.py  interfaces.py  report_creator.py
app/fonts_for_pdf/: DejaVuSansCondensed-Bold.pkl  DejaVuSansCondensed.pkl
app/repos/reports/: json_report.py  pdf_report.py
app/repositories/: container.py
app/repositories/reports/: __init__.py  db_report.py  json_report.py  pdf_report.py  types.py  xlsx_report.py
app/repositories/reports/db_report/: db_report.py  groups.py  students.py  subjects.py  timetables.py
nginx/: Dockerfile  nginx.conf
tests/: conftest.py  test_create_subject_timetable.py  test_fake_student_data.py  test_group_builder.py  test_reports.py
