[tool.poetry]
name = "get-report-about-groups-and-students-in-university"
version = "0.1.0"
description = ""
authors = ["andrey <andrey28059999@gmail.com>"]
readme = "README.md"
packages = [{include = "get_report_about_groups_and_students_in_university"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
colorama = "^0.4.6"
commonmark = "^0.9.1"
et-xmlfile = "^1.1.0"
Faker = "^17.0.0"
openpyxl = "^3.1.1"
Pygments = "^2.14.0"
python-dateutil = "^2.8.2"
rich = "^12.6.0"
shellingham = "^1.5.0.post1"
six = "^1.16.0"
typer = "^0.7.0"
fpdf = "^1.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.1.1"
isort = "^5.12.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
