[tool.poetry]
name = "students_generator"
version = "0.1.0"
description = ""
authors = ["andrey <andrey28059999@gmail.com>"]
readme = "README.md"
packages = [{include = "students_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
colorama = "^0.4.6"
commonmark = "^0.9.1"
et-xmlfile = "^1.1.0"
Faker = "^17.0.0"
openpyxl = "^3.1.1"
Pygments = "^2.14.0"
python-dateutil = "^2.8.2"
rich = "^12.6.0"
shellingham = "^1.5.0.post1"
six = "^1.16.0"
typer = "^0.7.0"
fpdf = "^1.7.2"
sqlalchemy = "^2.0.5.post1"
pydantic = "^1.10.6"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.5"
passlib = "^1.7.4"
flask = "^2.2.3"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
pdfminer-six = "^20221105"
commitizen = "^2.42.1"
python-dotenv = "^1.0.0"
pre-commit = "^3.1.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.0"
tag_format = "v$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
